Fix 100vh on mobile

--- a/src/res/menu.css
+++ b/src/res/menu.css
@@ -47,7 +47,7 @@
   left: 0;
   display: flex;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
 }
 
 .fade-in {
